[gd_scene load_steps=5 format=3 uid="uid://bojyfyp7reti6"]

[ext_resource type="PackedScene" uid="uid://cycxpbnmev0v5" path="res://scenes/player.tscn" id="1_0raqu"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_t8e3a"]
[ext_resource type="PackedScene" uid="uid://c7vvylwh235ev" path="res://scenes/enemy.tscn" id="2_u4lxy"]

[sub_resource type="Curve2D" id="Curve2D_x1ho2"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="main" type="Node2D"]
script = ExtResource("1_t8e3a")
enemy_scene = ExtResource("2_u4lxy")

[node name="player" parent="." instance=ExtResource("1_0raqu")]
position = Vector2(95, 135)

[node name="enemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="scoretimer" type="Timer" parent="."]

[node name="startimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="startposition" type="Marker2D" parent="."]
position = Vector2(240, 550)

[node name="enemypath" type="Path2D" parent="."]
curve = SubResource("Curve2D_x1ho2")

[node name="enemyPathFollow" type="PathFollow2D" parent="enemypath"]

[connection signal="hit" from="player" to="." method="_on_player_hit"]
[connection signal="timeout" from="enemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="scoretimer" to="." method="_on_scoretimer_timeout"]
[connection signal="timeout" from="startimer" to="." method="_on_startimer_timeout"]
